--- a/mod/area/wueste35.git.yml
+++ b/mod/area/wueste35.git.yml
@@ -2248,13 +2248,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -2314,13 +2314,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -2380,13 +2380,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -2446,13 +2446,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -2512,13 +2512,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -2578,13 +2578,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -2644,13 +2644,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -2710,13 +2710,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -2776,13 +2776,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -2842,13 +2842,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -3558,13 +3558,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -3624,13 +3624,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
