--- a/mod/area/adak_1ug.git.yml
+++ b/mod/area/adak_1ug.git.yml
@@ -3140,13 +3140,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -3206,13 +3206,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -3272,13 +3272,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -3338,13 +3338,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -6826,13 +6826,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
