--- a/mod/area/arnw_keelacave.git.yml
+++ b/mod/area/arnw_keelacave.git.yml
@@ -129,13 +129,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generalmed}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generalmed}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -194,13 +194,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_classlow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_classlow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -259,13 +259,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_classhig}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_classhig}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -324,13 +324,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generalhig}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generalhig}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -389,13 +389,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
