--- a/mod/area/gabel_gov.git.yml
+++ b/mod/area/gabel_gov.git.yml
@@ -8187,13 +8187,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_bookshelf}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_bookshelf}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -8253,13 +8253,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_bookshelf}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_bookshelf}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -8319,13 +8319,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_bookshelf}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_bookshelf}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -8385,13 +8385,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_bookshelf}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_bookshelf}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -8451,13 +8451,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_bookshelf}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_bookshelf}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -8517,13 +8517,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_bookshelf}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_bookshelf}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -11445,13 +11445,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_bookshelf}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_bookshelf}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
