--- a/mod/area/gabel_sw.git.yml
+++ b/mod/area/gabel_sw.git.yml
@@ -23506,13 +23506,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -23571,13 +23571,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -23961,13 +23961,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
@@ -24026,13 +24026,13 @@ Placeable List:
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: nw_o2_generallow}
+    OnDeath: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnHeartbeat: {type: :resref, value: ""}
     OnInvDisturbed: {type: :resref, value: ""}
     OnLock: {type: :resref, value: ""}
     OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: nw_o2_generallow}
+    OnOpen: {type: :resref, value: ""}
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
